--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -696,6 +696,21 @@ section.protecting-data {
 
 /******************** login-page ************/
 
+.admin-login-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+}
+.admin-login-icon p{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.admin-login-icon img {
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+}
 .card {
 
     width: 75%;
